--- a/server/templates/search/weather_results.html
+++ b/server/templates/search/weather_results.html
@@ -2,26 +2,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="{% static 'styles.css' %}">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <title>Weather Search</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>Weather Search</h1>
-    <form method="get">
-        {{ form.as_p }}
-        <button class="button">
-            <svg class="svgIcon" viewBox="0 0 512 512" height="1em" xmlns="http://www.w3.org/2000/svg">
-                <path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm50.7-186.9L162.4 380.6c-19.4 7.5-38.5-11.6-31-31l55.5-144.3c3.3-8.5 9.9-15.1 18.4-18.4l144.3-55.5c19.4-7.5 38.5 11.6 31 31L325.1 306.7c-3.2 8.5-9.9 15.1-18.4 18.4zM288 256a32 32 0 1 0 -64 0 32 32 0 1 0 64 0z"></path>
-            </svg>
-            Explore
-        </button>
-    </form>
-
-    {% if weather_data %}
-        <h2>Weather in {{ weather_data.location.name }}</h2>
-        <p>Temperature: {{ weather_data.current.temp_c }}°C</p>
-        <p>Condition: {{ weather_data.current.condition.text }}</p>
-        <img src="{{ weather_data.current.condition.icon }}" alt="{{ weather_data.current.condition.text }}">
-    {% endif %}
+    <header class="header-top">
+        <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary navbar-custom">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">wizouri</a>
+                <div class="form-custom">
+                    <form method="get">
+                        {{ form.as_p }}
+                        <button class='button' type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+    </header>
+    
+    <main class="d-flex flex-column align-items-center justify-content-center main-content">
+        <h1>Weather Search</h1>
+        {% if weather_data %}
+            <h2>Погода в {{ weather_data.location.name }}</h2>
+            <p>Температура: {{ weather_data.current.temp_c }}°C</p>
+            <p>{{ weather_data.current.condition.text }}</p>
+            <img src="{{ weather_data.current.condition.icon }}" alt="{{ weather_data.current.condition.text }}">
+        {% endif %}
+    </main>
 </body>
 </html>
