upgrade pip + rework html

--- a/server/templates/content/main.html
+++ b/server/templates/content/main.html
@@ -14,7 +14,7 @@
   </div>
   <div class="card-container">
     <div class="card">
-     <img src="media/image/new-york.jpg", alt=Image>
+     <img src="https://images.unsplash.com/photo-1518355077561-4af7abce973d?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D", alt=Image, class="image">
       <div class="card__content">
         <p class="card__main-title">Главный Заголовок</p>
         <p class="card__subtitle">Подзаголовок 1</p>
@@ -22,7 +22,7 @@
       </div>
     </div>
     <div class="card">
-        <img src="{% static 'image/new-york.jpg' %}", alt=Image>
+        <img src="https://images.unsplash.com/photo-1513326738677-b964603b136d?q=80&w=1949&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D", alt=Image, class="image">
       <div class="card__content">
         <p class="card__main-title">Главный Заголовок</p>
         <p class="card__subtitle">Подзаголовок 1</p>
