--- a/server/templates/search/weather_results.html
+++ b/server/templates/search/weather_results.html
@@ -1,34 +1,34 @@
 {% load static %}
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Search</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header class="header-top">
-        <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary navbar-custom">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">wizouri</a>
-                <div class="form-custom">
-                    <form method="get">
-                        {{ form.as_p }}
-                        <button class='button' type="submit">Search</button>
-                    </form>
+    <main class="d-flex flex-column align-items-center justify-content-center main-content">
+        <div class="search-container">
+            <h1>Weather Search</h1>
+            <div class="form-custom">
+                <form method="get">
+                    {{ form.as_p }}
+                    <button class='button' type="submit">Search</button>
+                </form>
+            </div>
+        </div>
+        {% if weather_data %}
+            <div class="card mt-4" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title">Погода в {{ weather_data.location.name }}</h5>
+                    <p class="card-text">Температура: {{ weather_data.current.temp_c }}°C</p>
+                    <p class="card-text">Погода: {{ weather_data.current.condition.text }}</p>
+                    <img src="{{ weather_data.current.condition.icon }}" alt="{{ weather_data.current.condition.text }}" class="card-img">
                 </div>
             </div>
-        </nav>
-    </header>
-    
-    <main class="d-flex flex-column align-items-center justify-content-center main-content">
-        <h1>Weather Search</h1>
-        {% if weather_data %}
-            <h2>Погода в {{ weather_data.location.name }}</h2>
-            <p>Температура: {{ weather_data.current.temp_c }}°C</p>
-            <p>{{ weather_data.current.condition.text }}</p>
-            <img src="{{ weather_data.current.condition.icon }}" alt="{{ weather_data.current.condition.text }}">
         {% endif %}
     </main>
 </body>
